--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
       "email": "facundonrodriguez@gmail.com"
    },
    "dependencies": {
+      "@mui/icons-material": "^5.0.0",
       "axios": "^0.21.1",
       "react": "^17.0.2",
       "react-dom": "^17.0.2",
-      "react-query": "^3.19.2",
+      "react-hook-form": "^7.15.4",
       "react-scripts": "4.0.3",
+      "react-select": "^4.3.1",
+      "react-switch": "^6.0.0",
       "react-table": "^7.7.0",
       "web-vitals": "^1.0.1"
    },
@@ -26,6 +29,7 @@
       "@types/node": "^12.0.0",
       "@types/react": "^17.0.0",
       "@types/react-dom": "^17.0.0",
+      "@types/react-select": "^4.0.17",
       "@types/react-table": "^7.7.2",
       "sass": "^1.37.5",
       "typescript": "^4.1.2"
