--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
       "email": "facundonrodriguez@gmail.com"
    },
    "dependencies": {
-      "@mui/icons-material": "^5.0.0",
       "axios": "^0.21.1",
       "react": "^17.0.2",
+      "react-confirm-alert": "^2.7.0",
       "react-dom": "^17.0.2",
       "react-hook-form": "^7.15.4",
       "react-scripts": "4.0.3",
